<resources>
    <string name="app_name">ChikoritaToolbox</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="plus">+</string>
    <string name="ded">/</string>
    <string name="mul">×</string>
    <string name="cut">—</string>
    <string name="clean">C</string>
    <string name="del">DEL</string>
    <string name="point">.</string>
    <string name="per">%</string>
    <string name="zf">+(-)</string>
    <string name="rel">=</string>
    <string name="len_change">长度转换</string>
    <string name="temp_change">温度转换</string>
    <string name="mon_change">货币转换</string>
    <string name="quit">返回</string>
    <string name="calc_name">计算器</string>
    <string name="base_converter_name">进制转换器</string>
    <string name="flashlight_name">闪光灯</string>
</resources>