<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_len"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="220dp"
        android:layout_marginTop="60dp"
        android:layout_weight="1"
        android:text="@string/len_change"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_money"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:text="@string/mon_change"
        app:layout_constraintBottom_toTopOf="@+id/btn_len"
        app:layout_constraintStart_toStartOf="@+id/btn_len"
        app:layout_constraintTop_toBottomOf="@+id/btn_temp" />

    <Button
        android:id="@+id/btn_temp"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:text="@string/temp_change"
        app:layout_constraintStart_toStartOf="@+id/btn_len"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/unvis_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Button"
                android:visibility="invisible" />

            <Button
                android:id="@+id/btnClean"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clean" />

            <Button
                android:id="@+id/btnDel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/del" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/num7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seven" />

            <Button
                android:id="@+id/num8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eight" />

            <Button
                android:id="@+id/num9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nine" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/num4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/four" />

            <Button
                android:id="@+id/num5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/five" />

            <Button
                android:id="@+id/num6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/six" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/num1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/one" />

            <Button
                android:id="@+id/num2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/two" />

            <Button
                android:id="@+id/num3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/three" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/unvis_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Button"
                android:visibility="invisible" />

            <Button
                android:id="@+id/num0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero" />

            <Button
                android:id="@+id/numpoint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/point" />
        </TableRow>
    </TableLayout>

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="120dp"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_temp" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="120dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="@+id/spinner1"
        app:layout_constraintTop_toTopOf="@+id/btn_len" />

    <TextView
        android:id="@+id/tv1"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:text="0"
        android:textAlignment="viewStart"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/spinner1" />

    <TextView
        android:id="@+id/tv2"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:text="0"
        android:textAlignment="viewStart"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/spinner2" />

</androidx.constraintlayout.widget.ConstraintLayout>